--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "braces": "^3.0.2",
     "expo": "^35.0.0",
     "firebase": "^7.2.1",
+    "mem": "^5.1.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
@@ -21,7 +23,8 @@
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "thunk": "^0.0.1"
+    "thunk": "^0.0.1",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
